--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,46 @@
 html, body {
-  background: lightgray;
+  background: #EDEDED;
 }
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  justify-content: center;
+  justify-items: center;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.content {
+  width: 80%;
+  background: rgba(0, 80, 158, 0.1);
+}
+
+#seminar-card {
+  min-width: 350px;
+  max-width: 500px;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) transform 0.5s;
+  cursor: pointer;
+}
+#seminar-card:hover {
+  transform: scale(1.05);
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    width: 90%;
+    background: none;
+  }
+  #seminar-card {
+    min-width: 350px;
+    max-width: 350px;
+  }
+}
+
+#appbar {
+  background-color: rgba(0, 80, 158);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  z-index: 99;
 }
