--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@ html, body {
   justify-content: center;
 }
 
+#logo {
+  filter: invert(100%)
+}
+
 .content {
   width: 80%;
   background: rgba(0, 80, 158, 0.1);
